--- a/README.org
+++ b/README.org
@@ -112,7 +112,7 @@ Emacs バージョン 25.4 以降での利用を想定しています．
   (defvar my-locate-utility (expand-file-name "elisp/utility.el" user-emacs-directory)
     "Place where `utility.el' should be.")
 
-  (defvar my-locate-document (expand-file-name "doc/index.html" user-emacs-directory)
+  (defvar my-locate-document (expand-file-name "docs/index.html" user-emacs-directory)
     "Place where `index.html' should be.")
 #+end_src
 
