modify about default-directory for GNU and Unix systems

--- a/README.org
+++ b/README.org
@@ -118,7 +118,7 @@ Emacs バージョン 25.4 以降での利用を想定しています．
 
 #+begin_src emacs-lisp
   (defconst my-site-lisp-directory
-    (expand-file-name "site-lisp" user-emacs-directory)
+    (expand-file-name "site-lisp/" user-emacs-directory)
     "We should put here packages.")
 
   (let ((default-directory my-site-lisp-directory))
