--- a/README.org
+++ b/README.org
@@ -152,9 +152,6 @@ Issue [[https://github.com/purcell/exec-path-from-shell/issues/36][#36]] [[https
 
   (defvar my-locate-utility (expand-file-name "elisp/utility.el" user-emacs-directory)
     "Place where `utility.el' should be.")
-
-  (defvar my-locate-document (expand-file-name "docs/index.html" user-emacs-directory)
-    "Place where `index.html' should be.")
 #+end_src
 
 *** Backup file
@@ -176,16 +173,6 @@ Issue [[https://github.com/purcell/exec-path-from-shell/issues/36][#36]] [[https
 #+end_src
 
 ** Functions
-*** Open document
-~M-x my-open-document~ で本設定ファイルを HTML にエクスポートしたものをブラウザで開きます．
-
-#+begin_src emacs-lisp :tangle ./elisp/utility.el
-  (defun my-open-document ()
-    "Open document in default browser."
-    (interactive)
-    (browse-url-of-file my-locate-document))
-#+end_src
-
 *** Edit init file
 ~README.org~ を編集するには ~C-x C-f~ で開くか ~M-x my-edit-init~ とします．
 
@@ -196,34 +183,16 @@ Issue [[https://github.com/purcell/exec-path-from-shell/issues/36][#36]] [[https
     (find-file my-locate-readme))
 #+end_src
 
-~M-x my-make-all~ で ~my-init.el~, ~utility.el(c)~ と ~index.html~ を生成します．
+*** Compile the configurations
+~M-x my-make-config~ で ~my-init.el~, ~utility.el(c)~ を生成します．
 
 #+begin_src emacs-lisp :tangle ./elisp/utility.el
-  (defun my-make-all ()
-    "Make `my-init.el', `utility.el' and `index.html'."
-    (interactive)
-    (my-make-init)
-    (byte-compile-file my-locate-utility)
-    (my-make-document))
-#+end_src
-
-~my-init.el~ を生成するには関数 =my-make-init= を利用します．
-
-#+begin_src emacs-lisp :tangle ./elisp/utility.el
-  (defun my-make-init ()
-    "Make `my-init.el' with `org-babel-tangle'."
+  (defun my-make-config ()
+    "Make `my-init.el', `utility.el' and `utility.elc'."
     (interactive)
     (with-current-buffer (find-file-noselect my-locate-readme)
-      (org-babel-tangle)))
-#+end_src
-
-
-#+begin_src emacs-lisp :tangle ./elisp/utility.el
-  (defun my-make-document ()
-    "Make document html file."
-    (interactive)
-    (with-current-buffer (find-file-noselect my-locate-readme)
-      (org-html-export-to-html)))
+      (org-babel-tangle))
+    (byte-compile-file my-locate-utility))
 #+end_src
 
 ** Package manager
@@ -1544,7 +1513,6 @@ Org-mode のように =C-c '= でコードブロックを編集するには [[ht
 | =C-c <right>= | Demote    |
 | =C-c <left>=  | Promote   |
 
-
 * Programming Languages
 ** C/C++
 Language Server として [[https://github.com/MaskRay/ccls][ccls]] を利用します．
@@ -1765,6 +1733,9 @@ Macaulay2 を Emacs で使うにはこのファイルをロードすれば良い
 
 * License
 本設定ファイルは [[https://www.gnu.org/licenses/gpl.html][GNU 一般公衆ライセンス]] (バージョン 3 または以降の任意のバージョン) で公開しています．
+
+また [[https://mahito1594.github.io/dotemacs/][GitHub Page]] の表示に [[https://orgmode.org/worg/style/worg.css][~worg.css~]] を利用しています．
+~worg.css~ は GNU 一般公衆ライセンス (バージョン 3 または以降の任意のバージョン) で公開されています．
 
 #+begin_src emacs-lisp :tangle ./elisp/utility.el
   (provide 'utility)
