Update README (ad hoc fix for Cica font and all-the-icons)

--- a/README.org
+++ b/README.org
@@ -1852,13 +1852,52 @@ Emacs 起動時にフレームを最大化します．
 #+end_src
 
 ** Font
-フォントに関しては，例えば，次のように ~local-conf.el~ に記述します．
+フォントの設定は ~local-conf.el~ で次の変数
+
+- ~my-font-size~
+- ~my-font-family~
+
+をセットし， ~after-init-hook~ などに関数 ~my-font-initialize~ を追加します．
+また ~M-x my-set-default-font-size~ や ~M-x my-set-default-font-family~ でもフォントの設定を変更できます．
+
+#+begin_src emacs-lisp :tangle ./elisp/utility.el
+  (defvar my-font-size)
+  (defvar my-font-family)
+
+  (defun my-font-initialize ()
+    "Initialize font settings"
+    (let* ((fheight (round (* 10 my-font-size))))
+      (set-face-attribute 'default nil
+                          :family my-font-family
+                          :height fheight)
+      (message "Font setting...done")))
+
+  (defun my-set-default-font-size (size)
+    "Set font size to SIZE"
+    (interactive "nFont Size:")
+    (setq my-font-size size)
+    (my-font-initialize))
+
+  (defun my-set-default-font-family (family)
+    "Set font family to FAMILY"
+    (interactive "sFont Family:")
+    (setq my-font-family family)
+    (my-font-initialize))
+#+end_src
+
+例えば次のような設定が考えられます．
 
 #+begin_src emacs-lisp :tangle no
-  (set-face-attribute 'default nil
-                      :family "Source Han Code JP"
-                      :height 140)
+  (add-hook 'after-init-hook
+            #'(lambda ()
+                (setq my-font-size 12
+                      my-font-family "Cica")
+                (my-font-initialize)))
 #+end_src
+
+[[https://github.com/miiton/Cica][Cica]] フォントが all-the-icons と相性が悪いように思います ([[https://github.com/mahito1594/dotemacs/issues/32][参考]])．
+また変数 ~all-the-icons-scale-factor~ を小さめに設定したほうが良いかもしれません．
+
 * Global keybindings
 global-map のキーバインドを次のように変更します．
 
