Add/modify functions
Now we can change default font size/family interactively.

--- a/README.org
+++ b/README.org
@@ -1857,32 +1857,45 @@ Emacs 起動時にフレームを最大化します．
 - ~my-font-size~
 - ~my-font-family~
 
-をセットし， ~after-init-hook~ などに関数 ~my-font-initialize~ を追加します．
-また ~M-x my-set-default-font-size~ や ~M-x my-set-default-font-family~ でもフォントの設定を変更できます．
+をセットし， ~after-init-hook~ などに関数 ~my--font-initialize~ を追加します．
 
 #+begin_src emacs-lisp :tangle ./elisp/utility.el
-  (defvar my-font-size)
-  (defvar my-font-family)
+  (defvar my-font-size 10
+    "Font size.")
+  (defvar my-font-family ""
+    "Font family.")
 
-  (defun my-font-initialize ()
-    "Initialize font settings"
+  (defun my--font-initialize ()
+    "Initialize font settings.
+
+  After setting the variables `my-font-size' and `my-font-family',
+  run this function.  For instance, add to `after-init-hook' in `local-conf.el'."
     (let* ((fheight (round (* 10 my-font-size))))
       (set-face-attribute 'default nil
                           :family my-font-family
                           :height fheight)
       (message "Font setting...done")))
+#+end_src
 
-  (defun my-set-default-font-size (size)
-    "Set font size to SIZE"
-    (interactive "nFont Size:")
+また関数 ~my-change-font-size~ と ~my-change-font-family~ を利用してインタラクティブにフォントサイズやファミリを変更することもできます．
+~my-change-font-family~ は ~ivy-read~ を利用した絞り込み検索を行います．
+
+#+begin_src emacs-lisp :tangle ./elisp/utility.el
+  (defun my-change-font-size (size)
+    "Set the default font size to SIZE."
+    (interactive "nFont Size: ")
     (setq my-font-size size)
-    (my-font-initialize))
+    (my--font-initialize))
 
-  (defun my-set-default-font-family (family)
-    "Set font family to FAMILY"
-    (interactive "sFont Family:")
-    (setq my-font-family family)
-    (my-font-initialize))
+  (defun my-change-font-family ()
+    "Set the default font family to FAMILY."
+    (interactive)
+    (ivy-read "Font Family: " (font-family-list)
+              :require-match t
+              :action (lambda (family)
+                        (setq my-font-family family)
+                        (my--font-initialize))
+              :caller 'my-change-font-family))
 #+end_src
 
 例えば次のような設定が考えられます．
