--- a/README.org
+++ b/README.org
@@ -966,11 +966,7 @@ Flycheck を有効にしたいモードについて個々に =flycheck-mode= を
     :commands (lsp)
     :hook (lsp-mode . lsp-enable-which-key-integration)
     :custom
-    (lsp-prefer-flymake t)
-    :config)
-
-  (use-package lsp-ivy
-    :commands (lsp-ivy-workspace-symbol))
+    (lsp-prefer-flymake t))
 
   (use-package company-lsp
     :demand t
